--- a/src/assets/sass/parts/reviews.scss
+++ b/src/assets/sass/parts/reviews.scss
@@ -1,6 +1,8 @@
 @import "../variables/colors";
+@import "../tools/animations";
 
 .reviews {
+  position: relative;
   .header {
     .title {
 
@@ -16,14 +18,78 @@
   }
   .footer {
     .review {
-      .stars {
-
+      &.slide-right-leave-active,
+      &.slide-left-leave-active {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
       }
-      .testimony {
-
+      &.slide-right-enter-active {
+        animation: slideRigthIn .5s;
       }
-      .autor {
-
+      &.slide-right-leave-active {
+        animation: slideRightOut .5s;
+      }
+      &.slide-left-enter-active {
+        animation: slideLeftIn .5s;
+      }
+      &.slide-left-leave-active {
+        animation: slideLeftOut .5s;
+      }
+    }
+  }
+  .reviews-nav {
+    position: absolute;
+    top: -7px;
+    width: 100%;
+    .review-nav_prev,
+    .review-nav_next {
+      position: absolute;
+      top: 0;
+      border: none;
+      background: none;
+      width: 60px;
+      height: 60px;
+      cursor: pointer;
+      &:before {
+        position: absolute;
+        top: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 4em;
+        font-weight: 100;
+        padding: 0.2em  0.5em;
+        color: rgba($second-color, 0.9);
+        background: transparent;
+        width: 100%;
+        height: 100%;
+        transition: background 0.2s ease-in-out;
+      }
+      &:hover {
+        &:before {
+          color: rgba($second-color, 0.5)
+        }
+      }
+    }
+    .review-nav_prev {
+      left: 0;
+      &:before {
+        content: '\02C2';
+        left: 0;
+        right: auto;
+      }
+    }
+    .review-nav_next {
+      right: 0;
+      left: auto;
+      &:before {
+        content: '\02C3';
+        right: 0;
+        left: auto;
       }
     }
   }
